correction after some changes in the menu burger (align items)

--- a/caroussel.css
+++ b/caroussel.css
@@ -70,6 +70,7 @@ h1.accty {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  align-items: center;
   text-align: center;
   background-color: #ffffff;
   /* transition: top 0.5s ; */
@@ -215,6 +216,8 @@ nav ul li{
 
 li a {
   color: black;
+  display: flex;
+  justify-content: center;
 }
 
 li .contact-desktop {
